modified res and form, added color, data and array

--- a/form.html
+++ b/form.html
@@ -9,8 +9,12 @@
 
     <h2>CREATE YUHH</h2>
     
-    <form action="./save" method="post">
+<!--     <form action="./save" method="post">
         <input type="text" name="catBreed" id="">
+    </form> -->
+
+    <form action="./saveColor" method="post">
+        <input type="text" name="color" id="">
     </form>
 
 </body>
