--- a/form.html
+++ b/form.html
@@ -7,15 +7,11 @@
 </head>
 <body>
 
-    <h2>CREATE YUHH</h2>
+    <h2>CREATE A CAT YES</h2>
     
-<!--     <form action="./save" method="post">
+    <form action="./save" method="post">
         <input type="text" name="catBreed" id="">
-    </form> -->
-
-    <form action="./saveColor" method="post">
-        <input type="text" name="color" id="">
-    </form>
+    </form> 
 
 </body>
 </html>
