ändrade lite.. cat = data stuff

--- a/form.html
+++ b/form.html
@@ -10,7 +10,8 @@
     <h2>CREATE A CAT YES</h2>
     
     <form action="./save" method="post">
-        <input type="text" name="catBreed" id="">
+        <input type="text" name="catBreed" placeholder="catbreed?">
+        <input type="text" name="name" placeholder="name of cat?">
     </form> 
 
 </body>
