--- a/form.html
+++ b/form.html
@@ -9,9 +9,10 @@
 
     <h2>CREATE A CAT YES</h2>
     
-    <form action="./save" method="post">
-        <input type="text" name="catBreed" placeholder="catbreed?">
-        <input type="text" name="name" placeholder="name of cat?">
+    <form action="./save" method="post">    
+        <input type="text" name="catBreed" placeholder="cat breed?">
+        <input type="text" name="catName" placeholder="cat name?">
+        <input type="submit" value="create">
     </form> 
 
 </body>
