--- a/create.html
+++ b/create.html
@@ -9,10 +9,10 @@
 
     <h2>CREATE A CAT YES</h2>
     
-    <form action="./save" method="post">    
+    <form action="/cats" method="post">    
         <input type="text" name="catBreed" placeholder="cat breed?">
         <input type="text" name="catName" placeholder="cat name?">
-        <input type="submit" value="create">
+        <input type="submit" value="create a car">
     </form> 
 
 </body>
