--- a/delete.html
+++ b/delete.html
@@ -7,11 +7,9 @@
 </head>
 <body>
     <h2>REMOVE A CAT FROM LIST</h2>
-    <form action="./remove" method="post">
-        <input type="text" name="catName" placeholder="cats name?">
-        <input type="text" name="catBreed" placeholder="cats breed?">
+    <form action="/cats" method="delete">
         <input type="text" name="id" placeholder="id?">
-        <input type="submit" value="delete">
+        <input type="submit" value="delete specified cat">
     </form>
 </body>
 </html>
