--- a/delete.html
+++ b/delete.html
@@ -4,12 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>delete</title>
+
+    <script>
+            function submitRemoval(){
+                console.log("HELLOOO");
+                const id = document.querySelector("#id").value; 
+                if (!id) return console.error("No ID provided"); //check if ID is existent 
+
+                const data = new URLSearchParams();
+                data.append('id', id);
+
+                fetch(`/GA/cats`, {method:"DELETE", body:data, headers:{"Content-type":"application/x-www-form-urlencoded"}, redirect:"manual"}).then((response) => {
+                    const loco = response.headers.get("Loco");
+                    window.location.replace(loco);
+                    return response.json();
+                }).then((response) => {
+                    console.log(response);
+                });
+        }
+    </script>
+
 </head>
 <body>
     <h2>REMOVE A CAT FROM LIST</h2>
-    <form action="/cats" method="delete">
+    <form>
         <input type="text" name="id" placeholder="id?">
         <input type="submit" value="delete specified cat">
+        <button onclick="submitRevomal()" type="button">Remove</button>
     </form>
 </body>
 </html>
