--- a/delete.html
+++ b/delete.html
@@ -28,9 +28,8 @@
 <body>
     <h2>REMOVE A CAT FROM LIST</h2>
     <form>
-        <input type="text" name="id" placeholder="id?">
-        <input type="submit" value="delete specified cat">
-        <button onclick="submitRevomal()" type="button">Remove</button>
+        <input id="id" type="text" name="id" placeholder="id?">
+        <button onclick="submitRemoval()" type="button">Remove</button>
     </form>
 </body>
 </html>
